add variance-based sampling acquisition

--- a/examples/general_parameters/test_general_optimization.ipynb
+++ b/examples/general_parameters/test_general_optimization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
     "from olympus.campaigns import Campaign, ParameterSpace\n",
     "from olympus.surfaces import Surface\n",
     "\n",
-    "from atlas.optimizers.gp.planner_general import BoTorchPlanner"
+    "# from atlas.optimizers.gp.planner_general import BoTorchPlanner"
    ]
   },
   {
@@ -1858,9 +1858,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torch2",
+   "display_name": "atlas",
    "language": "python",
-   "name": "torch2"
+   "name": "atlas"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1872,7 +1872,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
