--- a/examples/medusa/datasets/genetic_general.ipynb
+++ b/examples/medusa/datasets/genetic_general.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c491d11e",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "050065c2",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "026d8694",
    "metadata": {},
    "outputs": [],
@@ -181,24 +181,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "97e33e3b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[[0, 1, 2]], [[0], [1, 2]], [[0, 1], [2]], [[1], [0, 2]], [[0], [1], [2]]]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gen_partitions(S)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "064fe59b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(441, 2)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "param_opts = [f'x{i}' for i in range(21)]\n",
+    "params_opts = [param_opts, param_opts]\n",
+    "cart_product = list(product(*params_opts))\n",
+    "cart_product = np.array([list(elem) for elem in cart_product])\n",
+    "cart_product.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f8a84598",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['x0',\n",
+       " 'x1',\n",
+       " 'x2',\n",
+       " 'x3',\n",
+       " 'x4',\n",
+       " 'x5',\n",
+       " 'x6',\n",
+       " 'x7',\n",
+       " 'x8',\n",
+       " 'x9',\n",
+       " 'x10',\n",
+       " 'x11',\n",
+       " 'x12',\n",
+       " 'x13',\n",
+       " 'x14',\n",
+       " 'x15',\n",
+       " 'x16',\n",
+       " 'x17',\n",
+       " 'x18',\n",
+       " 'x19',\n",
+       " 'x20']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8a84598",
+   "id": "2b251ca5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -220,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
