working prototype medusa cont analytic

--- a/examples/medusa/datasets/analyze_datasets.ipynb
+++ b/examples/medusa/datasets/analyze_datasets.ipynb
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "id": "dd0ad69f",
    "metadata": {},
    "outputs": [],
@@ -724,12 +724,11 @@
     "    \"\"\"\n",
     "    f_x = 0.\n",
     "    for g_ix, Sg in enumerate(G):\n",
-    "        f_xg = 0.\n",
     "        for si in Sg:\n",
     "            f_xg += buchwald_lookup(xgs[g_ix], si, lookup)\n",
-    "        f_x += f_xg / len(Sg)\n",
     "        \n",
     "    return f_x\n",
+    "\n",
     "        "
    ]
   },
@@ -855,11 +854,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0d7644f4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "code",
@@ -886,7 +887,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
